basic bootstrap and content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello This is my home page.
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.cs" />
+    <link rel="stylesheet" href="css/app.cs" />
+</head>
+<body>
+    <header>
+        <h1>HEADER</h1>
+    </header>
+    <footer>
+        <h1>FOOTER</h1>
+    </footer>
+</body>
+</html>
