--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
-    <link rel="stylesheet" href="../css/bootstrap.min.cs" />
-    <link rel="stylesheet" href="../css/app.cs" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.cs" />
+    <link rel="stylesheet" type="text/css" href="css/app.cs" />
 </head>
 <body>
     <header>
