--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
     <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body>
-    <header>
+    <header class="container-fluid">
         <h1>HEADER</h1>
     </header>
-    <footer>
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-sm-2"></aside>
+            <section class="col-sm-8"></section>
+            <aside class="col-sm-2"></aside>
+        </div>
+    </div>
+    <footer class="container-fluid">
         <h1>FOOTER</h1>
     </footer>
 </body>
 </html>
+
