--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body>
-    <header class="container-fluid">
-        <h1>HEADER</h1>
-    </header>
     <div class="container-fluid">
+        <div class="row">          
+            <section class="col-sm-12">
+                <img src="images/profile.jpg" alt="Swetha">
+            </section>            
+        </div>
         <div class="row">
             <aside class="col-sm-2"></aside>
             <section class="col-sm-8"></section>
             <aside class="col-sm-2"></aside>
         </div>
-    </div>
-    <footer class="container-fluid">
-        <h1>FOOTER</h1>
-    </footer>
+    </div>    
 </body>
 </html>
 
