--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <div class="row">          
             <section class="col-sm-12">
-                <img src="images/profile.jpg" alt="Swetha">
+                <img src="images/profile.png" alt="Swetha ">
             </section>            
         </div>
         <div class="row">
