Fixed contact me section.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Lives In</h4>
+                    <h4 class="text-uppercase mb-4">Located In</h4>
                     <p class="lead mb-0">
                         Redmond WA 98052
                     </p>
